instructions.Instructions.scala.error
Erreur de compilation :
Instructions:2: error: identifier expected but integer literal found.
avance(nbPas:2)
             ^Instructions:15: error: ')' expected but '}' found.
	}
        ^